prometheus/prometheusOperator/Prometheus-core/prometheus-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-k8s
  namespace: monitoring
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 3.5.0
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: prometheus
      app.kubernetes.io/instance: k8s
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: kube-prometheus

  policyTypes:
    - Ingress
    - Egress

  egress:
    - { } # 允许 Prometheus 访问任何外部资源（告警通知等）

  ingress:
    # Prometheus 自身访问
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9090
          protocol: TCP
        - port: 8080
          protocol: TCP

    # Prometheus Adapter 访问
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus-adapter
      ports:
        - port: 9090
          protocol: TCP

    # Grafana 访问 Prometheus
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
      ports:
        - port: 9090
          protocol: TCP

    # Ingress-NGINX Controller 访问
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - port: 9090
          protocol: TCP
